[package]
name = "codeium-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
tower = "0.5.2"
tower-lsp = "0.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
